# flask-skeleton-app

./: main.py
skeleton_files/: setup.cfg
