[metadata]
name = ytdlutils
author = Jon Rickman
license = MIT
license_file = LICENSE
platforms = osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: 9

[options]
packages =
    ytdlutils
install-requires = 
    yt-dlp
python_requires = >= 3.9
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    flake8
    mypy
    tox

[options.package_data]
mailer = py.typed

[flake8]
max-line-length = 140